# gnupg

./: Makefile.am  configure.ac
common/: exechelp-posix.c  exechelp-w32.c  exechelp-w32ce.c  exechelp.h
g10/: keyedit.c
tests/: make-windows-cd.sh  run-tests.bat
tests/gpgscm/: Makefile.am  ffi-private.h  ffi.c  ffi.h  lib.scm  main.c  private.h  scheme-config.h  scheme.c  t-child.scm  tests.scm
tests/openpgp/: 4gb-packet.scm  Makefile.am  README  armdetach.scm  armdetachm.scm  armencrypt.scm  armencryptp.scm  armsignencrypt.scm  armsigs.scm  clearsig.scm  conventional-mdc.scm  conventional.scm  decrypt-dsa.scm  decrypt.scm  defs.scm  detach.scm  detachm.scm  ecc.scm  encrypt-dsa.scm  encrypt.scm  encryptp.scm  finish.scm  genkey1024.scm  gpgtar.scm  mds.scm  multisig.scm  run-tests.scm  seat.scm  setup.scm  signencrypt-dsa.scm  signencrypt.scm  sigs-dsa.scm  sigs.scm  verify.scm  version.scm
